# soccer-tools

./: .signore  main.py  pyproject.toml  requirements.txt
ali_FC/config/: settings.py
ali_FC/fc/: invoke.py
ali_FC/models/: change_score.py  detect_league.py  load_team_matches.py  query_matches.py
ali_FC/server/: add_match.py  change_score.py  delete_matches.py  detect_league.py  list_tools.py  load_team_matches.py  query_matches.py
ali_FC/tools/: registry.py
auto/: Ali_tool_wrapper.py  FC_client.py  agent.py  fc_decorator.py  handler.py  main.py  yanzheng1.py
auto/client/: main.py  test.py  test1.py
auto/client/agent/: soccer_agent.py
auto/client/fc/: client.py  invoke.py
auto/client/models/: add_match.py  delete_matches.py
auto/client/tools/: wrappers.py
auto/common/utils/: En2Le.py
auto/storage/: oss_storage.py
auto/tools/: add_match.py  change_score.py  delete_matches.py  detect_league.py  list_tools.py  load_team_matches.py  query_matches.py
data/: SP1.csv
src/: client.py  client1.py  server.py  server1.py
src/common/utils/: Ch2En.py  En2Le.py  datatransform.py
src/test_data/: D1.json  E0.json  F1.json  I1.json
test_data/: D1.json  E0.json  SP1.json
