[project]
name = "soccer-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alibabacloud-darabonba-stream>=0.0.2",
    "alibabacloud-fc20230330==4.6.6",
    "aliyun-fc2>=2.5.2",
    "aliyun-python-sdk-core>=2.16.0",
    "fastmcp>=2.13.2",
    "langchain>=1.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "mcp>=1.23.3",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pip>=25.3",
]
